--- a/02_HTML_Proposal_Doc/css/style.css
+++ b/02_HTML_Proposal_Doc/css/style.css
@@ -1,7 +1,7 @@
 
 
 body {
-background-color: #fce5ffd3;   
+background-color: #daeaf6;   
 color:#fb6f92;
 font: 15px; font-family: 'Arsenal';
 
@@ -44,7 +44,7 @@ ul {
 }
 
 figure {
-  color:#a7bed3
+  color:#78b075
 
 }
 p {
